fixed visibility of radio input

--- a/src/pages/Submit.scss
+++ b/src/pages/Submit.scss
@@ -44,6 +44,10 @@
       input {
         margin-right: 10px;
       }
+
+      input[type="radio"] {
+          width: auto!important;
+      }
     }
   }
 }
